--- a/style.css
+++ b/style.css
@@ -2,156 +2,9 @@
     padding: 0;
     margin: 0;
 }
-
-@media(min-width: 1200px) {
+@media(min-width: 1000px){
     .main {
         background-image: url(./splash.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        width: 100vw;
-    }
-
-    .container {
-        padding: 30px 0px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 580px;
-
-        background-color: rgba(245, 238, 239, 0.1);
-        border-radius: 25px;
-        position: relative;
-        box-shadow: 10px 10px 30px rgba(196, 123, 135, 0.5);
-        border-top: 1px solid rgba(255, 255, 255, 0.5), rgba(196, 123, 135, 0.5);
-        border-left: 1px solid rgba(255, 255, 255, 0.5), rgba(196, 123, 135, 0.5);
-        backdrop-filter: blur(3px);
-        overflow: hidden;
-    }
-
-    .ui {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .h1 {
-        width: 100%;
-        text-align: center;
-    }
-
-    h1 {
-        text-shadow: 3px 4px rgb(164, 88, 101);
-        font-size: 100px;
-        color: white;
-        font-family: 'Blaka', 'cursive';
-        padding: 0;
-        margin-right: -2px;
-        display: inline;
-    }
-
-    .head1 {
-        font-size: 130px;
-        text-shadow: 3px 8px hsla(186, 83%, 5%, 0.5), 4px 7px hsl(0, 40%, 57%);
-        transition: 0.2s ease-in;
-    }
-
-    p {
-        color: white;
-        font-size: 20px;
-        text-align: center;
-        font-family: 'Permanent Marker', 'cursive';
-    }
-
-    input {
-        width: 420px;
-        padding: 17px 0px 17px 10px;
-        border: none;
-        outline: none;
-        border-radius: 10px;
-        margin: 10px auto;
-        font-size: 18px;
-        font-family: 'Comfortaa', 'cursive';
-    }
-
-    button {
-        padding: 17px 0px;
-        margin: 10px auto;
-        width: 432px;
-        border-radius: 10px;
-        border: none;
-        outline: none;
-        color: white;
-        background-color: rgb(255, 155, 171);
-        font-size: 20px;
-        font-weight: 500;
-        font-family: 'Comfortaa', 'cursive';
-    }
-
-    button:hover,
-    #input1:hover,
-    #input2:hover{
-        transform: scale(1.06);
-        transition: 0.2s ease-in;
-    }
-
-    .pic1:hover{
-        transform: scale(1.3);
-        transition: 0.2s ease-in;
-    }
-
-    .message {
-        text-shadow: 3px 5px hsla(187, 60%, 52%, 0.5), 4px 3px hsl(0, 40%, 57%);
-        color: rgb(211, 95, 114);
-        font-weight: 400;
-        font-size: 40px;
-        padding-top: 10px;
-        text-align: center;
-        font-family: 'Permanent Marker', 'cursive';
-    }
-
-    .empty {
-        width: 28vw;
-        text-align: center;
-        border-radius: 20px;
-        margin: 20px auto;
-        position: relative;
-        box-shadow: 10px 10px 30px rgba(196, 123, 135, 0.4);
-        border-radius: 15px;
-        border-top: 1px solid rgba(247, 241, 241, 0.3), rgba(196, 123, 135, 0.5);
-        border-left: 1px solid rgba(255,255,255,0.5), rgba(196, 123, 135, 0.5);
-        background-color: rgba(247, 241, 241, 0.1);
-        backdrop-filter: blur(3px);
-        overflow: hidden;
-    }
-
-    .pic {
-        width: 80px;
-        background: rgba(255, 255, 255, 0.4);
-        backdrop-filter: blur(8px);
-        border: 4px dashed rgba(0, 0, 0,0.6);
-        border-radius: 10px;
-        padding: 20px;
-        margin-top: 60px;
-    }
-
-    .pic1 {
-        width: 33px;
-        position: absolute;
-        top: 15px;
-        right: 15px;
-    }
-
-    .remove {
-        display: none;
-    }
-}
-@media(min-width: 580px){
-    .main {
-        background-image: url(./splash1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
@@ -193,7 +46,7 @@
         text-shadow: 3px 4px rgb(164, 88, 101);
         font-size: 100px;
         color: white;
-        font-family: 'Blaka', 'cursive';
+        font-family: 'Lobster', cursive;
         padding: 0;
         margin-right: -2px;
         display: inline;
@@ -219,7 +72,7 @@
         border-radius: 10px;
         margin: 10px auto;
         font-size: 18px;
-        font-family: 'Comfortaa', 'cursive';
+        font-family: 'Permanent Marker', 'cursive';
     }
 
     button {
@@ -233,7 +86,154 @@
         background-color: rgb(255, 155, 171);
         font-size: 20px;
         font-weight: 500;
-        font-family: 'Comfortaa', 'cursive';
+        font-family: 'Permanent Marker', 'cursive';
+    }
+
+    button:hover,
+    #input1:hover,
+    #input2:hover{
+        transform: scale(1.06);
+        transition: 0.2s ease-in;
+    }
+
+    .pic1:hover{
+        transform: scale(1.3);
+        transition: 0.2s ease-in;
+    }
+
+    .message {
+        text-shadow: 3px 5px hsla(187, 60%, 52%, 0.5), 4px 3px hsl(0, 40%, 57%);
+        color: rgb(211, 95, 114);
+        font-weight: 400;
+        font-size: 35px;
+        padding-top: 10px;
+        text-align: center;
+        font-family: 'Permanent Marker', 'cursive';
+    }
+
+    .empty {
+        width: 70%;
+        text-align: center;
+        border-radius: 20px;
+        margin: 20px auto;
+        position: relative;
+        box-shadow: 10px 10px 30px rgba(196, 123, 135, 0.4);
+        border-radius: 15px;
+        border-top: 1px solid rgba(247, 241, 241, 0.3), rgba(196, 123, 135, 0.5);
+        border-left: 1px solid rgba(255,255,255,0.5), rgba(196, 123, 135, 0.5);
+        background-color: rgba(247, 241, 241, 0.1);
+        backdrop-filter: blur(3px);
+        overflow: hidden;
+    }
+
+    .pic {
+        width: 80px;
+        background: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(8px);
+        border: 4px dashed rgba(0, 0, 0,0.6);
+        border-radius: 10px;
+        padding: 20px;
+        margin-top: 60px;
+    }
+
+    .pic1 {
+        width: 33px;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+    }
+
+    .remove {
+        display: none;
+    }
+
+}
+
+@media(max-width: 1000px){
+    .main {
+        background-image: url(./splash2.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .container {
+        padding: 30px 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 500px;
+        max-width: 85%;
+        background-color: rgba(245, 238, 239, 0.1);
+        border-radius: 25px;
+        position: relative;
+        box-shadow: 10px 10px 30px rgba(196, 123, 135, 0.5);
+        border-top: 1px solid rgba(255, 255, 255, 0.5), rgba(196, 123, 135, 0.5);
+        border-left: 1px solid rgba(255, 255, 255, 0.5), rgba(196, 123, 135, 0.5);
+        backdrop-filter: blur(3px);
+        overflow: hidden;
+    }
+
+    .ui {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    h1 {
+        text-shadow: 3px 4px rgb(164, 88, 101);
+        font-size: 100px;
+        color: white;
+        font-family: 'Lobster', cursive;
+        padding: 0;
+        margin-right: -2px;
+        display: inline;
+    }
+
+    .head1 {
+        font-size: 130px;
+        text-shadow: 3px 8px hsla(186, 83%, 5%, 0.5), 4px 7px hsl(0, 40%, 57%);
+        transition: 0.2s ease-in;
+    }
+
+    p {
+        color: white;
+        font-size: 19px;
+        font-family: 'Permanent Marker', 'cursive';
+    }
+
+    input {
+        width: 400px;
+        padding: 17px 0px 17px 10px;
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        margin: 10px auto;
+        font-size: 18px;
+        font-family: 'Permanent Marker', 'cursive';
+    }
+
+    button {
+        padding: 17px 0px;
+        margin: 10px auto;
+        width: 412px;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        color: white;
+        background-color: rgb(255, 155, 171);
+        font-size: 20px;
+        font-weight: 500;
+        font-family: 'Permanent Marker', 'cursive';
     }
 
     button:hover,
@@ -339,23 +339,23 @@
 
     h1 {
         text-shadow: 3px 4px rgb(164, 88, 101);
-        font-size: 70px;
+        font-size: 65px;
         color: white;
-        font-family: 'Blaka', 'cursive';
+        font-family: 'Lobster', cursive;
         padding: 0;
         margin-right: -2px;
         display: inline;
     }
 
     .head1 {
-        font-size: 100px;
+        font-size: 90px;
         text-shadow: 3px 8px hsla(186, 83%, 5%, 0.5), 4px 7px hsl(0, 40%, 57%);
         transition: 0.2s ease-in;
     }
 
     p {
         color: white;
-        font-size: 13px;
+        font-size: 16px;
         width: 90%;
         text-align: center;
         font-family: 'Permanent Marker', 'cursive';
@@ -368,8 +368,8 @@
         outline: none;
         border-radius: 10px;
         margin: 10px auto;
-        font-size: 17px;
-        font-family: 'Comfortaa', 'cursive';
+        font-size: 15px;
+        font-family: 'Permanent Marker', 'cursive';
     }
 
     button {
@@ -381,9 +381,8 @@
         outline: none;
         color: white;
         background-color: rgb(255, 155, 171);
-        font-size: 17px;
-        font-weight: 500;
-        font-family: 'Comfortaa', 'cursive';
+        font-size: 18px;
+        font-family: 'Permanent Marker', 'cursive';
     }
 
     button:hover,
